fix nav spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   position: absolute;
   display: grid;
-  height: 140vh;
+  /* height: 140vh; */
   width: 100vw;
   margin: 0px;
   row-gap: 0px;
