--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -9,6 +9,11 @@
     --offWhite: #D5C9AE;
 }
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 
 .navBar {
     position: sticky;
@@ -59,5 +64,5 @@
 }
 
 /* div {
-    border: solid black 1px;
+    border: solid blue 1px;
 } */
